@@ -796,6 +796,16 @@ argument_list|)
 decl_stmt|;
 specifier|protected
 specifier|transient
+name|boolean
+name|isLogInfoEnabled
+init|=
+name|LOG
+operator|.
+name|isInfoEnabled
+argument_list|()
+decl_stmt|;
+specifier|protected
+specifier|transient
 name|String
 name|alias
 decl_stmt|;
@@ -2516,10 +2526,7 @@ block|}
 block|}
 if|if
 condition|(
-name|LOG
-operator|.
-name|isInfoEnabled
-argument_list|()
+name|isLogInfoEnabled
 condition|)
 block|{
 name|cntr
