@@ -526,13 +526,12 @@ comment|// so we have to do differently.
 name|boolean
 name|isArray
 init|=
+operator|!
+operator|(
 name|data
-operator|.
-name|getClass
-argument_list|()
-operator|.
-name|isArray
-argument_list|()
+operator|instanceof
+name|List
+operator|)
 decl_stmt|;
 if|if
 condition|(
@@ -761,13 +760,12 @@ comment|// We support both List<Object> and Object[]
 comment|// so we have to do differently.
 if|if
 condition|(
+operator|!
+operator|(
 name|data
-operator|.
-name|getClass
-argument_list|()
-operator|.
-name|isArray
-argument_list|()
+operator|instanceof
+name|List
+operator|)
 condition|)
 block|{
 name|data
